code done- no connection

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -15,7 +15,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "from stackapi import StackAPI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast = forecastio.load_forecast(key=key, lat=lat, lng=lon)\n",
+    "SITE = StackAPI(\"stackoverflow\")"
    ]
   },
   {
@@ -31,7 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "question_time = SITE.fetch(\"questions\", fromdate= 1560256662, todate= 1562843047)\n",
+    "answer_time = SITE.fetch(\"answers\", fromdate= 1560256662, todate= 1562843047)"
    ]
   },
   {
@@ -47,7 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "questions_5 = SITE.fetch(\"questions\", fromdate= 1560250731, todate= 1562843047, tagged =\"pyhton\", sort=\"votes\", min=5)\n"
    ]
   },
   {
@@ -63,15 +77,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "quesiton_id = SITE.fetch()\n",
+    "answer_id = SITE.fetch('answers', ids = [6784, 6473])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ironhack-3.7",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ironhack-3.7"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
